--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="images/logo_title.png" type="image/png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alef">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
@@ -43,7 +44,7 @@
                 <h1>More Plans For You:</h1>
             </div>
             <div class="plans_holder">
-                <div class="plan"><div class="crop"><div class="plan_title"><img src="images/plan5.jpg"></div>
+                <div class="plan"><div class="crop"><img src="images/plan5.jpg"></div>
                 <div class="plan_bottom"><div class="plan_title"><h2>Flexibility</h2><div class="bar_blue"><p>67% match</p><div class="bar_white fill_67"></div></div></div></div></div>
                 <div class="plan"><div class="crop"><img src="images/plan6.jpg"></div>
                 <div class="plan_bottom"><div class="plan_title"><h2>Heavy Weight</h2><div class="bar_blue"><p>67% match</p><div class="bar_white fill_67"></div></div></div></div></div>
